k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-game
  namespace: chess-game
  labels:
    app.kubernetes.io/name: chess-game
    app.kubernetes.io/component: webserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chess-game
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
